# IT_Tasks

AlgorithmsLab/: AlgorithmsLab.cpp  AlgorithmsLab.sln  AlgorithmsLab.vcxproj  AlgorithmsLab.vcxproj.filters
GeometricProblems/: CentrMassTreug.cpp  DiagPramougolnika.cpp  DlinaOtrez.cpp  Geometry.cpp  Geometry.sln  Geometry.vcxproj  Geometry.vcxproj.filters  P_Mnogougolnika.cpp  Peresech_2_Mnogoug.cpp  Peresech_2otrez.cpp  PrinadlezhTochki.cpp  Proverka _3tochki.cpp  S_Treugolnika.cpp
InfoLab/: InfoLab.cpp  InfoLab.sln  InfoLab.vcxproj  InfoLab.vcxproj.filters  Temperature.cpp  stops.cpp
LabWorkCPN2/: client_socket.sh  factorial.sh  file_backup.sh  file_info.sh  kill_process.sh
LabWorkOAIPN2/: CMakeLists.txt  main.cpp
PointerTasks/: AddTenToAllElemOfVector.cpp  AnalyzeParamsOfProcess.cpp  BufferCommandControl.cpp  CMakeLists.txt  ChangeSymbol.cpp  CheckPolyndrom.cpp  ConcatStr.cpp  CountSymb.cpp  DeleteSpacesFromStr.cpp  EqualTwoStr.cpp  FindRMS.cpp  FindSubstring.cpp  MyStrCopy.cpp  MyStrLen.cpp  ParseTelemData.cpp  ReverseStr.cpp  SumOfVectorValues.cpp  main.cpp
Seminar_5/: BuildingEnergyActivity.cpp  CMakeLists.txt  CarSpeedAnalyze.cpp  CreateAndWithdrawVector.cpp  DeleteNegativeNumbers.cpp  DoubleValue.cpp  ElectroEngineStats.cpp  EngineVibrationAnalyze.cpp  FactoryEnergyActivity.cpp  FindAndDelete.cpp  FindMaxValueElem.cpp  FuelManage.cpp  PipeMonitoring.cpp  StatsByData.cpp  TemperatureAnalyze.cpp  TemperatureAndPressureMonitoring.cpp  main.cpp
Seminar_6/: CMakeLists.txt  CesarAlgorithm.cpp  CheckAllSymbolStringSameAnother.cpp  CheckPalyndrome.cpp  CompressionWords.cpp  CountUniqSymbols.cpp  CountVowelsAndConsonants.cpp  DeleteAllNumbersFromString.cpp  FindAllSubstringLengthKWithUniqSymbols.cpp  FindMaxSameSubstring.cpp  InvertWordsInSentence.cpp  RegistrCorrect.cpp  main.cpp
(+55 files in other folders)
