cmake_minimum_required(VERSION 4.0)
project(PointerTasks)

set(CMAKE_CXX_STANDARD 20)

add_executable(PointerTasks main.cpp
        MyStrLen.cpp
        MyStrCopy.cpp
        ConcatStr.cpp
        CountSymb.cpp
        ChangeSymbol.cpp
        ReverseStr.cpp
        CheckPolyndrom.cpp
        FindSubstring.cpp
        DeleteSpacesFromStr.cpp
        EqualTwoStr.cpp
        SumOfVectorValues.cpp
        AddTenToAllElemOfVector.cpp
        ParseTelemData.cpp
        FindRMS.cpp
        BufferCommandControl.cpp
        AnalyzeParamsOfProcess.cpp
)
