cmake_minimum_required(VERSION 4.0)
project(Seminar_5)

set(CMAKE_CXX_STANDARD 20)

add_executable(Seminar_5 main.cpp
        CreateAndWithdrawVector.cpp
        DoubleValue.cpp
        FindMaxValueElem.cpp
        DeleteNegativeNumbers.cpp
        StatsByData.cpp
        FindAndDelete.cpp
        TemperatureAnalyze.cpp
        CarSpeedAnalyze.cpp
        ElectroEngineStats.cpp
        BuildingEnergyActivity.cpp
        EngineVibrationAnalyze.cpp
        FuelManage.cpp
        PipeMonitoring.cpp
        FactoryEnergyActivity.cpp
        TemperatureAndPressureMonitoring.cpp)
