cmake_minimum_required(VERSION 4.0)
project(Seminar_6)

set(CMAKE_CXX_STANDARD 20)

add_executable(Seminar_6 main.cpp
        CheckPalyndrome.cpp
        CountUniqSymbols.cpp
        DeleteAllNumbersFromString.cpp
        CheckAllSymbolStringSameAnother.cpp
        CountVowelsAndConsonants.cpp
        CesarAlgorithm.cpp
        CompressionWords.cpp
        RegistrCorrect.cpp
        FindMaxSameSubstring.cpp
        InvertWordsInSentence.cpp
        FindAllSubstringLengthKWithUniqSymbols.cpp)
